fix: section editorial spacing

--- a/src/components/section-editorial/section-editorial.scss
+++ b/src/components/section-editorial/section-editorial.scss
@@ -45,13 +45,7 @@
   .section-editorial {
     padding-top: var(--section-editorial-y-padding-desk);
     padding-bottom: var(--section-editorial-y-padding-desk);
-  }
-}
-
-.content-column {
-  .section-editorial {
-    h2,
-    .text-container {
+    h2, .text-container p {
       width: 75%;
     }
   }
